--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,16 +32,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/paddle.tscn", "res://Scenes/ball.tscn", "res://Scenes/wall.tscn", "res://Scenes/brick.tscn", "res://Scenes/death_zone.tscn", "res://Scenes/ui.tscn", "res://Scenes/start_menu.tscn")
-current_scene="res://Scenes/ui.tscn"
-center_split_offset=-518
+current_scene="res://Scenes/main.tscn"
+center_split_offset=-281
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/ball.gd", "res://Scripts/brick.gd", "res://Scripts/brick_spawner.gd", "res://Scripts/death_zone.gd", "res://Scripts/level_definitions.gd", "res://Scripts/paddle.gd", "res://Scripts/start_menu.gd", "res://Scenes/ui.gd"]
-selected_script="res://Scenes/ui.gd"
+selected_script="res://Scripts/brick_spawner.gd"
 open_help=["CanvasItem", "CollisionShape2D", "Shape2D", "Tween", "Vector2"]
 script_split_offset=70
 list_split_offset=0
